test: RemoteAgentCardRegistry·RemoteAgentTools·InvocationService 보강
RemoteAgentCardRegistry는 A2A 정적 모킹으로 findCard·getAgentDescriptions·peek 경로를 검증한다. RemoteAgentTools는 레지스트리 목킹으로 null·미등록·병렬 집계와 sendStream 성공 경로를 검증한다. DefaultInvocationService는 streaming ChatClient 분리, null 요청, thinking 태그 제거, invokeStream 이후 saveAll을 검증한다.

Made-with: Cursor